--- a/Game_2.cbp
+++ b/Game_2.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="setupapi" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Game_2" prefix_auto="1" extension_auto="1" />
@@ -31,8 +34,8 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="Base.cpp" />
-		<Unit filename="Base.h" />
+		<Unit filename="Bullet.cpp" />
+		<Unit filename="Bullet.h" />
 		<Unit filename="CommnonFunc.cpp" />
 		<Unit filename="CommonFunc.h" />
 		<Unit filename="enemy.cpp" />
